@@ -1,6 +1,10 @@
 
 Drupal 7.32, xxxx-xx-xx (development version)
 -----------------------
+- Improved database queries generated by EntityFieldQuery in the case where
+  delta or language condition groups are used, to reduce the number of INNER
+  JOINs (this is a minor data structure change affecting code which implements
+  hook_query_alter() on these queries).
 - Removed special-case behavior for file uploads which allowed user #1 to
   bypass maximum file size and user quota limits.
 
